[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "tiktoken>=0.13.0",
]
